# FggStoreCardsBot

./: .dockerignore  .env.example  .gitignore  .render.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/config/: __init__.py  settings.py
app/handlers/: __init__.py  card_handler.py
app/models/: __init__.py  card_data.py
app/services/: __init__.py  card_generator.py
app/utils/: __init__.py  constants.py  text_processor.py
